--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ComposeEntitySample"
         tools:targetApi="31">
+
+        <!-- FileProvider для експорту файлу -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -25,6 +37,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name="io.github.sergeyboboshko.composeentity.daemons.dbtransfer.ImportDatabaseActivity" />
+        <activity android:name="io.github.sergeyboboshko.composeentity.daemons.dbtransfer.BluetoothTransferActivity" />
+        <activity android:name="io.github.sergeyboboshko.composeentity.daemons.dbtransfer.ShareDatabaseActivity" />
+
     </application>
 
 </manifest>
